# rustic-macros

./: Cargo.toml  README.md
src/: lib.rs
tests/compile_fail/: only_functions.rs  only_functions.stderr
tests/pass/: modifiers.rs
