[package]
name = "rustic-macros"
version = "0.1.5"
authors = ["Benji Zhai"]
edition = "2021"
rust-version = "1.65.0"
description = "Library for building canisters on the Internet Computer."
license = "MIT OR Apache-2.0"
repository = "https://github.com/internet-computer-protocol/rustic-macros/"
keywords = ["icp", "blockchain", "smart-contracts"]
categories = ["cryptography::cryptocurrencies", "finance", "wasm"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["fold", "full"]}
ic-cdk = "0.10"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0"

[[test]]
name = "test_modifiers"
path = "tests/pass/modifiers.rs"
